--- a/views/cadastroLivro.html
+++ b/views/cadastroLivro.html
@@ -22,7 +22,7 @@
       <label for="editora">Editora:</label>
       <input type="text" id="editora" name="editora" required><br><br>
 
-      <label for="urlImagem">Capa Do Livro:</label>
+      <label for="urlImagem">Capa Do Livro (Url da Imagem):</label>
       <input type="text" id="urlImagem" name="urlImagem" required><br><br>
   
       <label for="anoPublicacao">Ano de Publicação:</label>
